# arc

./: .gitignore  Cargo.toml  Dockerfile  README.md  arc-improved-master-plan.md  install.ps1  install.sh  test_file.txt
.github/workflows/: ci.yml  release.yml
arc-cli/: Cargo.toml
arc-cli/src/: clipboard.rs  main.rs  ui.rs
arc-cli/src/commands/: clipboard.rs  config.rs  discover.rs  mod.rs  pair.rs  peers.rs  ping.rs  receive.rs  relay.rs  send.rs  uninstall.rs  verify.rs
arc-cli/tests/: e2e_commands.rs  security.rs
arc-cli/tests/support/: mod.rs
arc-core/: Cargo.toml
arc-core/benches/: transfer.rs
arc-core/src/: config.rs  keystore.rs  lib.rs  machine.rs  security.rs  storage.rs
arc-core/src/compression/: mod.rs
arc-core/src/crypto/: cipher.rs  hash.rs  identity.rs  mod.rs
arc-core/src/protocol/: capability.rs  messages.rs  mod.rs  state.rs
arc-core/src/transfer/: chunker.rs  clipboard.rs  discovery.rs  mod.rs  orchestrator.rs  pipeline.rs  resume.rs
arc-core/src/transfer/orchestrator/: receiver.rs  sender.rs  transport.rs
arc-core/tests/: edge_cases.rs  integration_tests.rs  security_integration.rs
arc-core/tests/common/: mod.rs
arc-relay/: Cargo.toml
arc-relay/src/: main.rs
arc-relay/tests/: relay_security.rs
arc-relay/tests/support/: mod.rs
