[package]
name = "arc-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for arc"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
arc-core = { path = "../arc-core" }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }
indicatif = { version = "0.18.4", features = ["tokio"] }
crossterm = "0.29.0"
rand = "0.10.1"
qrcode = "0.14.1"
console = "0.16.3"
dialoguer = "0.12.0"

# Clipboard
arboard = "3.6.1"
tempfile = "3.27.0"

# Async
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde_json = "1.0.150"
hex = "0.4.3"
clap_complete = "4.6.5"
