[package]
name = "arc-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for arc"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
arc-core = { path = "../arc-core" }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }
indicatif = { version = "0.18.4", features = ["tokio"] }
rand = "0.10.1"
qrcode = "0.14.1"
dialoguer = "0.12.0"

# Clipboard
arboard = "3.6.1"
tempfile = "3.27.0"

# Async and Networking
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hex = "0.4.3"
clap_complete = "4.6.5"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
blake3 = { version = "1.8.5", features = ["rayon"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
uuid = { version = "1.23.4", features = ["v4"] }
tokio = { version = "1.52.3", features = ["rt", "macros"] }
blake3 = "1.8.5"
hex = "0.4.3"

[[test]]
name = "e2e_commands"
path = "tests/e2e_commands.rs"
harness = true

[[test]]
name = "security"
path = "tests/security.rs"
harness = true
