[package]
name = "arc-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Core library for arc: secure P2P file and clipboard transfer"
license = "MIT OR Apache-2.0"

[features]
default = []
pqc = ["pqcrypto-mlkem", "pqcrypto-mldsa"]
delta-transfer = []
io-uring = ["tokio-uring"]

[dependencies]
# === Async Runtime ===
tokio = { version = "1.52.3", features = ["full"] }

# === Transport (Iroh P2P) ===
iroh = { version = "1.0.0" }

# === Crypto ===
argon2 = "0.5.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
hkdf = "0.13.0"
sha2 = "0.11.0"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
blake3 = { version = "1.8.5", features = ["rayon"] }
rand = "0.10.1"
rustls = { version = "0.23.23", features = ["ring"] }
# rand_core 0.6 is needed for x25519-dalek 2.0.1 compatibility (its CryptoRng trait)
rand_core_06 = { package = "rand_core", version = "0.6.4", features = ["getrandom"] }
zeroize = "1.9.0"

# === Post-Quantum (feature-gated) ===
pqcrypto-mlkem = { version = "0.1.1", optional = true }
pqcrypto-mldsa = { version = "0.1.2", optional = true }

# === Compression ===
zstd = "0.13.3"
lz4_flex = "0.13.1"

# === I/O ===
bytes = "1.12.0"

# === Protocol ===
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hex = "0.4.3"
# bincode 3.0.0 is an intentionally nonfunctional final release; keep the latest working 2.x.
bincode = "=2.0.1"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
bitflags = "2.13.0"

# === Discovery ===
mdns-sd = "0.20.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
url = "2.5.4"

# === System info (for machine capacity detection) ===
num_cpus = "1.17.0"
sysinfo = "0.39.5"

# === Observability ===
tracing = "0.1.44"

# === Utilities ===
thiserror = "2.0.18"
anyhow = "1.0.103"
async-trait = "0.1.89"
tar = "0.4.46"
tempfile = "3.27.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
dialoguer = "0.12.0"
keyring = { version = "4.1.2", features = ["apple-native-keyring-store", "windows-native-keyring-store", "zbus-secret-service-keyring-store"] }
dirs = "6.0.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
proptest = "1.11.0"
tokio-test = "0.4.5"
tempfile = "3.27.0"

# === io_uring (Linux only, feature-gated) ===
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5.0", optional = true }

[[bench]]
name = "transfer"
harness = false

